# RDPShare

./: CMakeLists.txt  Guids.cpp  RDPFile.cpp  RDPFile.h  RDPSessionEvents.h  RDPShare.cpp  RDPShareServer.cpp  RDPShareServer.h  README.md  Server.cpp  Server.h  Sharer.cpp  Sharer.h  Utils.cpp  Utils.h
.github/workflows/: codeql-analysis.yml
